--- a/data/geany.glade
+++ b/data/geany.glade
@@ -713,6 +713,7 @@
     <property name="type_hint">dialog</property>
     <property name="skip_pager_hint">True</property>
     <property name="has_separator">True</property>
+    <property name="icon_name">geany</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
@@ -6366,6 +6367,7 @@
     <property name="type_hint">dialog</property>
     <property name="transient_for">window1</property>
     <property name="has_separator">True</property>
+    <property name="icon_name">geany</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="project_dialog_vbox">
         <property name="visible">True</property>
@@ -7227,6 +7229,7 @@
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Geany</property>
+    <property name="icon_name">geany</property>
     <child internal-child="accessible">
       <object class="AtkObject" id="window1-atkobject">
         <property name="AtkObject::accessible-name" translatable="yes">Geany</property>
