--- a/data/geany.glade
+++ b/data/geany.glade
@@ -3,6 +3,13 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
+  <object class="GtkIconFactory" id="iconfactory1">
+    <sources>
+      <source stock-id="geany-build" icon-name="geany-build"/>
+      <source stock-id="geany-close-all" icon-name="geany-close-all"/>
+      <source stock-id="geany-save-all" icon-name="geany-save-all"/>
+    </sources>
+  </object>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">3</property>
     <property name="upper">1000</property>
@@ -467,7 +474,7 @@
   <object class="GtkImage" id="image4061">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-close</property>
+    <property name="stock">geany-close-all</property>
     <property name="icon-size">1</property>
   </object>
   <object class="GtkImage" id="image4062">
@@ -671,7 +678,7 @@
   <object class="GtkImage" id="image4057">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-save</property>
+    <property name="stock">geany-save-all</property>
     <property name="icon-size">1</property>
   </object>
   <object class="GtkImage" id="image4058">
