--- a/data/geany.glade
+++ b/data/geany.glade
@@ -8865,6 +8865,16 @@
                           </object>
                         </child>
                         <child>
+                          <object class="GtkMenuItem" id="clone1">
+                            <property name="use_action_appearance">False</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">_Clone</property>
+                            <property name="use_underline">True</property>
+                            <signal name="activate" handler="on_clone1_activate" swapped="no"/>
+                          </object>
+                        </child>
+                        <child>
                           <object class="GtkMenuItem" id="strip_trailing_spaces1">
                             <property name="use_action_appearance">False</property>
                             <property name="visible">True</property>
